# Google-Docs-Clone

backend/: .bazelrc  .gitignore  BUILD  MODULE.bazel  WORKSPACE
backend/proto/: BUILD  document_session.proto
backend/src/main/java/com/docsclone/document_session_api/: BUILD
backend/src/main/java/com/docsclone/persistence_service/: DocumentPersistenceServiceImpl.java
