# this file contains the module definition for the Bazel project

module(
    name = "google_docs_clone_backend",
    version = "0.1.0",  # starting version
)

# core Bazel utility library, often needed directly or transitively
bazel_dep(name = "bazel_skylib", version = "1.7.1")

# Rules for Java
bazel_dep(name = "rules_java", version = "8.11.0")

# Rules for Protocol Buffers
bazel_dep(name = "rules_proto", version = "7.0.2")

# gRPC Java - provides the rules and dependencies for gRPC in Java
bazel_dep(name = "grpc-java", version = "1.64.0")

# rules_jvm_external for managing Maven dependencies
bazel_dep(name = "rules_jvm_external", version = "6.3")

# Module extension from rules_jvm_external to fetch Maven artifacts
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        # --- gRPC / Netty Dependencies ---
        "io.grpc:grpc-netty-shaded:1.64.0",
        "io.grpc:grpc-protobuf:1.64.0",
        "io.grpc:grpc-stub:1.64.0",
        "com.google.protobuf:protobuf-java:3.25.3",  # ensure this aligns with protoc version from rules_proto
        "com.google.protobuf:protobuf-java-util:3.25.3",
        "javax.annotation:javax.annotation-api:1.3.2",  # For @Generated

        # --- Jetty / WebSocket Dependencies ---
        "org.eclipse.jetty:jetty-server:11.0.22",
        "org.eclipse.jetty:jetty-servlet:11.0.22",
        "org.eclipse.jetty:jetty-webapp:11.0.22",
        "org.eclipse.jetty.websocket:websocket-jetty-server:11.0.22",
        "org.eclipse.jetty.websocket:websocket-jetty-api:11.0.22",
        "org.eclipse.jetty.websocket:websocket-jetty-common:11.0.22",

        # --- Guice (Dependency Injection) ---
        "com.google.inject:guice:7.0.0",

        # --- JSON Processing ---
        "com.fasterxml.jackson.core:jackson-databind:2.17.1",

        # --- Logging (SLF4J API + Logback) ---
        "org.slf4j:slf4j-api:2.0.13",
        "ch.qos.logback:logback-classic:1.4.14",

        # --- Testing Dependencies ---
        "junit:junit:4.13.2",
        "com.google.truth:truth:1.4.2",
        "org.mockito:mockito-core:5.11.0",
        "io.grpc:grpc-testing:1.64.0",  # match the com_github_grpc_grpc_java version
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],

    # usually, with Bzlmod, modules declare their deps, and Bazel resolves them.
)
use_repo(maven, "maven")  # make the @maven repository visible/usable
